Fixes a weirdness on iOS 9

--- a/client/components/app/geography-lookup/styles.scss
+++ b/client/components/app/geography-lookup/styles.scss
@@ -78,6 +78,7 @@ $border: #393f4d;
       color: white;
       background-color: $bg;
       margin-left: 1px;
+      width: 46px;
     }
 
     &__affix-wrapper {
